[package]
name = "idf-testy"
version = "0.1.0"
authors = ["VovaGal"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "idf-testy"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.50.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embedded-svc = { version = "0.28", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
anyhow = "1"
rgb-led     = { path = "../std-training/common/lib/rgb-led" }

[build-dependencies]
embuild = "0.33"
